--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    min-width: 400px;
 }
 
 input {
@@ -18,7 +19,27 @@ button {
     font-weight: bold;
     color: white;
     background-color: #5f9341;
-    border: none;
+    border: 1px solid #5f9341;
     padding: 10px 15px;
 }
 
+#delete-btn {
+    background-color: white;
+    color:#5f9341
+
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin-top: 20px;
+    
+}
+
+li {
+    margin-top: 5px;
+}
+
+li a {
+    color: #5f9341;;
+}
